deploy: 1696679ac612b27e3ddd94bea48b1cc9ea4c1d32

--- a/about/index.html
+++ b/about/index.html
@@ -7,9 +7,9 @@
 <meta name=author content="Charl P. Botha">
 <meta property="og:title" content="About">
 <meta property="og:description" content="This is my personal blog.
+The canonical location of this blog is https://cpbotha.net/. There is a mirror at https://cpbotha.github.io/ in case cpbotha.net ever goes down (see WHV #232 for more information).
 You will find posts on science, software, general nerdery, privacy and backyard philosophy. It also hosts the Weekly Head Voices, a weekly (mostly not) personal diary, in which I usually also try to include something entertaining and/or educational.
-My personal, non-work e-mail address is cpbotha@cpbotha.net, although I much prefer if you leave a comment on the relevant blog post.
-(This blog is so old, it even has a history page.">
+My personal, non-work e-mail address is cpbotha@cpbotha.">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="en_US">
 <meta property="og:url" content="https://cpbotha.net/about/">
@@ -55,6 +55,9 @@ My personal, non-work e-mail address is cpbotha@cpbotha.net, although I much pre
 </div>
 <div class=article-entry itemprop=articleBody>
 <p>This is <a href=http://charlbotha.com>my</a> personal blog.</p>
+<p>The canonical location of this blog is <a href=https://cpbotha.net/>https://cpbotha.net/</a>. There is a mirror
+at <a href=https://cpbotha.github.io/>https://cpbotha.github.io/</a> in case cpbotha.net ever goes down (see <a href=/2021/09/13/weekly-head-voices-232-side-project-smorgasbord/#this-blog-hopefully-immortalised-on-github>WHV
+#232</a> for more information).</p>
 <p>You will find posts on science, software, general nerdery, privacy and
 <a href=/tags/backyard-philosophy/>backyard philosophy</a>. It also hosts <a href=/categories/weekly-head-voices/>the Weekly
 Head Voices</a>, a weekly (mostly not) personal
